src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwF1000-dhF500-b-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: F1000\ndefault window height: F500\nborder on\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1000 × 500, bounds: 1231 × 680, states: [Activated]
